--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "@tensorflow/tfjs": "^4.10.0",
     "@tonejs/midi": "^2.0.28",
     "localforage": "^1.10.0",
-    "midi-writer-js": "^2.1.4"
+    "midi-writer-js": "^2.1.4",
+    "tfjs": "^0.6.0",
+    "tonal": "^5.0.0"
   },
   "name": "bithovenmain",
   "description": "## A JavaScript MIDI-Player/ Piano-learning webapp",
