modified:   dist/bundle.js 	modified:   dist/bundle.js.map 	new file:   dist/vendors-node_modules_canvg_lib_index_es_js.bundle.js 	new file:   dist/vendors-node_modules_canvg_lib_index_es_js.bundle.js.map 	new file:   dist/vendors-node_modules_dompurify_dist_purify_js.bundle.js 	new file:   dist/vendors-node_modules_dompurify_dist_purify_js.bundle.js.map 	modified:   js/player/Player.js 	modified:   js/ui/UI.js 	modified:   package-lock.json 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.10.0",
     "@tonejs/midi": "^2.0.28",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
+    "midi-parser-js": "^4.0.4",
     "midi-writer-js": "^2.1.4",
+    "midiconvert": "^0.4.7",
     "tfjs": "^0.6.0",
-    "tonal": "^5.0.0"
+    "tonal": "^5.0.0",
+    "vexflow": "^4.2.3"
   },
   "name": "bithovenmain",
   "description": "## A JavaScript MIDI-Player/ Piano-learning webapp",
